# health-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE_VISIBILITY.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  INDEX.md  MCP_SETUP.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  TOOL_REFERENCE.md  USAGE_GUIDE.md  claude_desktop_config.json  demo.py  example_usage.md  health_data.db  main.py  pyproject.toml  test_server.py
.github/: copilot-instructions.md
